@@ -13,9 +13,9 @@ minecraft_version=1.20.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.2.0
+forge_version=47.1.3
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[47.2.0,)
+forge_version_range=[47.1.3,)
 # The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[47,)
 # The mapping channel to use for mappings.
