@@ -1,83 +1,3 @@
 {
 
-    "block.minecraft.deepslate_slab": "Deepslate Slab*",
-    "block.minecraft.deepslate_brick_slab": "Deepslate Brick Slab*",
-    "block.minecraft.deepslate_tile_slab": "Deepslate Tile Slab*",
-    "block.minecraft.cobbled_deepslate_slab": "Cobbled Deepslate Slab*",
-    "block.minecraft.polished_deepslate_slab": "Polished Deepslate Slab*",
-
-    "block.minecraft.acacia_slab": "Acacia Slab*",
-    "block.minecraft.birch_slab": "Birch Slab*",
-    "block.minecraft.dark_oak_slab": "Dark Oak Slab*",
-    "block.minecraft.jungle_slab": "Jungle Slab*",
-    "block.minecraft.oak_slab": "Oak Slab*",
-    "block.minecraft.spruce_slab": "Spruce Slab*",
-
-    "block.minecraft.granite": "Red Granite",
-    "block.minecraft.granite_slab": "Red Granite Slab*",
-    "block.minecraft.granite_stairs": "Red Granite Stairs",
-    "block.minecraft.granite_wall": "Red Granite Wall",
-
-    "block.minecraft.polished_granite": "Polished Red Granite",
-    "block.minecraft.polished_granite_slab": "Polished Red Granite Slab*",
-    "block.minecraft.polished_granite_stairs": "Polished Red Granite Stairs",
-    "block.minecraft.polished_granite_wall": "Polished Red Granite Wall",
-
-    "block.minecraft.stone": "Limestone",
-    "block.minecraft.stone_button": "Limestone Button",
-    "block.minecraft.stone_pressure_plate": "Limestone Pressure Plate",
-    "block.minecraft.stone_slab": "Limestone Slab*",
-    "block.minecraft.stone_stairs": "Limestone Stairs",
-    "block.minecraft.stone_wall": "Limestone Wall",
-
-    "block.minecraft.stone_bricks": "Limestone Bricks",
-    "block.minecraft.stone_brick_slab": "Limestone Brick Slab*",
-    "block.minecraft.stone_brick_stairs": "Limestone Brick Stairs",
-    "block.minecraft.stone_brick_wall": "Limestone Brick Wall",
-
-    "block.minecraft.smooth_stone": "Smooth Limestone",
-    "block.minecraft.smooth_stone_slab": "Smooth Limestone Slab*",
-    "block.minecraft.cracked_stone_bricks": "Cracked Limestone Bricks",
-    "block.minecraft.chiseled_stone_bricks": "Chiseled Limestone Bricks",
-
-    "block.minecraft.cobblestone": "Cobbled Limestone",
-    "block.minecraft.cobblestone_slab": "Cobbled Limestone Slab*",
-    "block.minecraft.cobblestone_stairs": "Cobbled Limestone Stairs",
-    "block.minecraft.cobblestone_wall": "Cobbled Limestone Wall",
-
-    "block.minecraft.mossy_stone": "Mossy Limestone",
-    "block.minecraft.mossy_stone_slab": "Mossy Limestone Slab*",
-    "block.minecraft.mossy_stone_stairs": "Mossy Limestone Stairs",
-    "block.minecraft.mossy_stone_wall": "Mossy Limestone Wall",
-
-    "block.minecraft.mossy_stone_bricks": "Mossy Limestone Bricks",
-    "block.minecraft.mossy_stone_brick_slab": "Mossy Limestone Brick Slab*",
-    "block.minecraft.mossy_stone_brick_stairs": "Mossy Limestone Brick Stairs",
-    "block.minecraft.mossy_stone_brick_wall": "Mossy Limestone Brick Wall",
-
-    "block.minecraft.mossy_cobblestone": "Mossy Cobbled Limestone",
-    "block.minecraft.mossy_cobblestone_slab": "Mossy Cobbled Limestone Slab*",
-    "block.minecraft.mossy_cobblestone_stairs": "Mossy Cobbled Limestone Stairs",
-    "block.minecraft.mossy_cobblestone_wall": "Mossy Cobbled Limestone Wall",
-
-    "block.minecraft.sand": "Tan Sand",
-
-    "block.minecraft.sandstone": "Tan Sandstone",
-    "block.minecraft.sandstone_slab": "Tan Sandstone Slab*",
-    "block.minecraft.sandstone_stairs": "Tan Sandstone Stairs",
-    "block.minecraft.sandstone_wall": "Tan Sandstone Wall",
-
-    "block.minecraft.chiseled_sandstone": "Chiseled Tan Sandstone",
-    "block.minecraft.cut_sandstone": "Cut Tan Sandstone",
-    "block.minecraft.cut_sandstone_slab": "Cut Tan Sandstone Slab*",
-
-    "block.minecraft.smooth_sandstone": "Smooth Tan Sandstone",
-    "block.minecraft.smooth_sandstone_slab": "Smooth Tan Sandstone Slab*",
-    "block.minecraft.smooth_sandstone_stairs": "Smooth Tan Sandstone Stairs"
-
-
-
-
-
-
 }
